--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <button data-num="8">8</button>
                 <button data-num="9">9</button>
                 <button data-num="0">0</button>
-                <button data-num=".">.</button>
+                <button id="dot" data-num=".">.</button>
                 <button data-eq="=">=</button>
             </div>
             <div class="operators">
