--- a/index.html
+++ b/index.html
@@ -19,31 +19,31 @@
                 <div id="input">0</div>
                 <div id="output"></div>
             </div>
-            <div id="more" class="more">
-                <button data-more="ac">AC</button>
-                <button data-more="del">DEL</button>
+            <div id="clear">
+                <button data-clear>AC</button>
+                <button data-delete>DEL</button>
             </div>
-            <div class="numbers">
-                <button data-num="1">1</button>
-                <button data-num="2">2</button>
-                <button data-num="3">3</button>
-                <button data-num="4">4</button>
-                <button data-num="5">5</button>
-                <button data-num="6">6</button>
-                <button data-num="7">7</button>
-                <button data-num="8">8</button>
-                <button data-num="9">9</button>
-                <button data-num="0">0</button>
-                <button id="dot" data-num=".">.</button>
-                <button data-eq="=">=</button>
+            <div id="numbers">
+                <button data-number>1</button>
+                <button data-number>2</button>
+                <button data-number>3</button>
+                <button data-number>4</button>
+                <button data-number>5</button>
+                <button data-number>6</button>
+                <button data-number>7</button>
+                <button data-number>8</button>
+                <button data-number>9</button>
+                <button data-number>0</button>
+                <button data-dot>.</button>
+                <button data-equal>=</button>
             </div>
-            <div class="operators">
-                <button data-op="+">+</button>
-                <button data-op="-">-</button>
-                <button data-op="/">÷</button>
-                <button data-op="*">x</button>
+            <div id="operators">
+                <button data-operator="+">+</button>
+                <button data-operator="-">-</button>
+                <button data-operator="/">÷</button>
+                <button data-operator="*">x</button>
             </div>
         </main>
-        <script src="app.js"></script>
+        <script type="module" src="index.js"></script>
     </body>
 </html>
